2010-03-12  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 2969129 ] Missing dlclose() in httpAdapter.c

2010-03-12 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* value.c:
	[ 2968198 ] CMPI_chars in sfcb - see #2967257
        (patch by Klaus Kaempf)

2010-03-11 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 2968656 ] cimcClientSfcbLocal.c does not clone return value
	(patch by Klaus Kaempf)

2010-03-10 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 2968246 ] connect2 builds unnecessary struct

2010-03-09 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* instance.c:
	[ 2966804 ] setObjectPath returns uninitialized pointer

2010-03-08  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c, sfcBroker.c:
	[ 2961422 ] Single HTTP Adapter

2010-03-05  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* configure.ac, test/pywbem/Makefile.am, test/pybwme/check_pywbem.py,
	  test/pywbem/ecn_interop.py:
	[ 2963601 ] pywbem tests

2010-03-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am in test subdirs
	[ 2963746 ] Incorrect license in test makefiles

2010-03-01 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* args.c, array.c, constClass.c, instance.c, internalProvider.c, objectpath.c:
	[ 2948647 ] getObjectPath may dereference NULL pointer

2010-02-25 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* extra/modelines, Makefile.am, *.c, *.h:
	[ 2955196 ] Pretty print (update)

2010-02-19 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* internalProvider.c:
	[ 2952616 ] internalProvider is not Threadsafe
	(patch by Till Steinbach )

2010-02-24 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerMgr.c:
	[ 2952912 ] resultSockets variable is not used threadsafe 
	(patch by Till Steinbach )

2010-02-24  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c, sfcBroker.c: 
	[ 2958167 ] Remove USE_THREADS sections of httpAdapter
