@@ -860,6 +860,7 @@ methProvider(int *requestor, OperationHdr * req)
   char           *className = (char *) req->className.data;
   char           *nameSpace = (char *) req->nameSpace.data;
   ProviderInfo   *info;
+  short          retcode;
 
   _SFCB_ENTER(TRACE_PROVIDERMGR, "methProvider");
   if (strcmp(className, "$ClassProvider$") == 0)
@@ -871,8 +872,16 @@ methProvider(int *requestor, OperationHdr * req)
       _SFCB_TRACE(1,
                   ("--- responding with  %s %p", info->providerName,
                    info));
+      if(!(req->options & OH_Internal)
+         && info->location
+         && *info->location
+         && (strncmp(info->location, "sfc", 3) == 0)) {
+        retcode = MSG_X_SFCB_PROVIDER;
+      } else {
+        retcode = MSG_X_PROVIDER;
+      }
       spSendCtlResult(requestor, &info->providerSockets.send,
-                      MSG_X_PROVIDER, 0, getProvIds(info).ids,
+                      retcode, 0, getProvIds(info).ids,
                       req->options);
     } else {
       if (rc != CMPI_RC_OK) {
